kubernetes/apps/default/minio/resources/http-route.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
  hostnames:
    - s3.milton.mcf.io
    - minio.milton.mcf.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: minio
          port: 9000
    - matches:
        - path:
            type: PathPrefix
            value: /console
      backendRefs:
        - name: minio
          port: 9001
