kubernetes/apps/default/minio/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
  annotations:
    external-dns.alpha.kubernetes.io/target: ipv4.cluster.milton.mcf.io
  labels:
    app.kubernetes.io/instance: minio
    app.kubernetes.io/name: minio
spec:
  ingressClassName: cilium
  rules:
  - host: s3.milton.mcf.io
    http:
      paths:
      - backend:
          service:
            name: minio
            port:
              number: 9000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - s3.milton.mcf.io
